Criação de tabelas com Migration

--- a/src/UI.Web/appsettings.json
+++ b/src/UI.Web/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;DataBase=DbVictorious.mdf;Integrated Security=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog= 'C:\\PROJETOS .NET\\MOTO CLUBE\\VICTORIOUS\\API\\SRC\\SGCVICTORIOUS\\DATA\\DBVICTORIOUS.MDF';Integrated Security=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
